prevent flickering from login button size change

--- a/_1327/static/less/1327.less
+++ b/_1327/static/less/1327.less
@@ -110,6 +110,8 @@ div#wrapper {
 }
 .dropdown.login-button {
 	z-index: 99998;
+	min-width: 5em;
+	text-align: right;
 }
 .login-button:hover a.login-link span {
 	display: none;
